2006-01-16  John Sullivan  <sullivan@apple.com>

        Reviewed by Vicki Murley.
        
        - fixed <rdar://problem/4409288> REGRESSION (TOT): When no selection is present on page, 
        Jump to Selection doesn't beep

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _hasInsertionPoint]):
        new helper method
        (-[NSArray validateUserInterfaceItem:]):
        Don't validate this menu item (or a couple of others) if the selection is a caret and
        the page isn't editable. In that state, there is no visible selection so this menu item
        doesn't make sense. I suspect this was broken by some editing-related change that makes
        selectionState return WebSelectionStateCaret here where it used to return WebSelectionStateNone.

2006-01-16  Tim Omernick  <timo@apple.com>

        Reviewed by John Sullivan.

	WebKit part of <rdar://problem/4211707> NPAPI ref count behavior differs with Mozilla

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView getVariable:value:]):
	The returned window script object is expected to be retained, as described here:
	<http://www.mozilla.org/projects/plugins/npruntime.html#browseraccess>

2006-01-16  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        * WebInspector.subproj/webInspector/inspector.js:
        Use defined NodeType values instead of integers.

2006-01-15  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Darin.
 
        New DOM Inspector that lives in WebKit and is accessible from any WebView.
        Accessible from a contextual menu when the WebKitEnableInspectElementContextMenuItem default is
        true or you have a development build. Browsing the tree, serialized HTML and CSS rules work.
 
        To always enable enter the following in the Terminal (change the bundle id to affect other WebKit apps):
        defaults write com.apple.Safari WebKitEnableInspectElementContextMenuItem -bool true
 