@@ -81,7 +81,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
                 <span class="label" style="width: initial">Element Attributes</span>
             </div>
             <div class="scrollArea">
-                <div id="elementAttributesScrollview" class="view">(not finished)</div>
+                <div class="view"><div id="elementAttributesScrollview"><ul class="attributeList" id="elementAttributesList"></ul></div></div>
                 <div id="elementAttributesScrollbar" class="scrollbar"></div>
             </div>
         </div>
