@@ -1,3 +1,15 @@
+2006-01-17  Anders Carlsson  <andersca@mac.com>
+
+        Reviewed by Timothy Hatcher.
+
+        - http://bugzilla.opendarwin.org/show_bug.cgi?id=5367
+        Web Inspector: finish node attributes
+        
+        * WebInspector.subproj/webInspector/inspector.css:
+        * WebInspector.subproj/webInspector/inspector.html:
+        * WebInspector.subproj/webInspector/inspector.js:
+        Add initial support for element attributes.
+
 2006-01-16  John Sullivan  <sullivan@apple.com>
 
         Reviewed by Vicki Murley.
